--- a/package.json
+++ b/package.json
@@ -19,8 +19,10 @@
     "clsx": "^2.1.1",
     "cobe": "^0.6.3",
     "framer-motion": "^11.11.11",
+    "geist": "^1.3.1",
     "lucide-react": "^0.456.0",
     "next": "15.0.3",
+    "postaify": "file:",
     "react": "19.0.0-rc-66855b96-20241106",
     "react-dom": "19.0.0-rc-66855b96-20241106",
     "react-dropzone": "^14.3.5",
