--- a/package.json
+++ b/package.json
@@ -18,9 +18,10 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "cobe": "^0.6.3",
-    "framer-motion": "^11.11.11",
+    "framer-motion": "^11.11.13",
     "geist": "^1.3.1",
     "lucide-react": "^0.456.0",
+    "mini-svg-data-uri": "^1.4.4",
     "next": "15.0.3",
     "postaify": "file:",
     "react": "19.0.0-rc-66855b96-20241106",
